[package]
name = "pokerust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
url = "2.3.1"
